--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">AppsGrupalLab4</string>
-    <string name="facebook_app_id">1682062358637277</string> <string name="fb_login_protocol_scheme">fb1682062358637277</string>
+    <string name="facebook_app_id">1682062358637277</string>
+    <string name="fb_login_protocol_scheme">fb1682062358637277</string>
 
 </resources>
