--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,11 +2,10 @@
     <string name="app_name">AppsGrupalLab4</string>
     <string name="facebook_app_id">1682062358637277</string>
     <string name="fb_login_protocol_scheme">fb1682062358637277</string>
-    <string name="todo">TODO</string>
-    <string name="button">Button</string>
-    <string name="textview">TextView</string>
-    <string name="textview">TextView</string>
-    <string name="textview">TextView</string>
-    <string name="textview">TextView</string>
 
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="bodycomentariodetalles">bodyComentarioDetalles</string>
+    <string name="comentario">comentario</string>
+    <string name="dateComentarioDetalles">dateComentarioDetalles</string>
+    <string name="textComentarioDetalles">textComentarioDetalles</string>
 </resources>
