Corregir detalles visibilidad.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="comentario">comentario</string>
     <string name="dateComentarioDetalles">dateComentarioDetalles</string>
     <string name="textComentarioDetalles">textComentarioDetalles</string>
+    <string name="comentar">Comentar</string>
 </resources>
